--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  overflow:hidden;
+  overflow: hidden;
 
   &:hover {
     cursor: pointer;
@@ -37,8 +37,8 @@
   .background-image {
     width: 100%;
     height: 100%;
-    background-position: center;
     background-size: cover;
+    background-position: center;
   }
 
   .content {
@@ -55,7 +55,7 @@
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
